Use WebAgent as an EdgeAgent using mediator

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,7 +19,7 @@ services:
     environment:
       - ASPNETCORE_URLS=http://10.0.0.11:7000
       - ASPNETCORE_ENVIRONMENT=Development
-      - ENDPOINT_HOST=${HOST1:-http://10.0.0.11:7000}
+      - ENDPOINT_HOST=${HOST1:-http://10.0.0.13:6000}
     ports:
       - "7000:7000"
     depends_on:
@@ -37,7 +37,7 @@ services:
     environment:
       - ASPNETCORE_URLS=http://10.0.0.12:8000
       - ASPNETCORE_ENVIRONMENT=Development
-      - ENDPOINT_HOST=${HOST2:-http://10.0.0.12:8000}
+      - ENDPOINT_HOST=${HOST2:-http://10.0.0.13:6000}
     ports:
       - "8000:8000"
     depends_on:
@@ -47,7 +47,25 @@ services:
     networks:
       agent_net:
         ipv4_address: 10.0.0.12
-    
+
+  mediator:
+    build:
+      context: .
+      dockerfile: docker/mediator.dockerfile
+    environment:
+      - ASPNETCORE_URLS=http://10.0.0.13:6000
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ENDPOINT_HOST=${HOST2:-http://10.0.0.13:6000}
+    ports:
+      - "6000:6000"
+    depends_on:
+      - "indy-pool"
+    links:
+      - "indy-pool"
+    networks:
+      agent_net:
+        ipv4_address: 10.0.0.13
+
 networks:
   agent_net:
     driver: bridge
